scraping  json dictionary

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ Imports:
     glue,
     htmltools,
     shinydashboard,
-    purrr
+    purrr,
+    rvest
 RoxygenNote: 7.0.0
 Suggests: 
     testthat
